--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-server.port=8445
-server.ssl.key-alias=Karthik2603
-server.ssl.key-password=password
-server.ssl.key-store-type=pkcs12
-server.ssl.key-store-password=password
-server.ssl.key-store=C:/Users/karth/Documents/Karthik2602.p12
+server.port=8080
+#server.ssl.key-alias=Karthik2603
+#server.ssl.key-password=password
+#server.ssl.key-store-type=pkcs12
+#server.ssl.key-store-password=password
+#server.ssl.key-store=C:/Users/karth/Documents/Karthik2602.p12
 spring.datasource.url=jdbc:mysql://localhost:3306/mysql
 spring.datasource.username=root
 spring.datasource.password=root@123
